--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
+    "@phosphor-icons/react": "^2.0.6",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.3.4",
+    "clsx": "^1.2.1",
+    "daisyui": "^2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "postcss": "^8.4.21",
+    "precss": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "react-hook-form": "^7.43.0",
+    "react-hot-toast": "^2.4.0",
+    "react-input-mask": "^2.0.4",
+    "react-query": "^3.39.3",
+    "tailwindcss": "^3.2.7",
+    "typescript": "5.0.2",
+    "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "@types/react-input-mask": "^3.0.2"
   }
 }
