--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^3.0.0",
     "@phosphor-icons/react": "^2.0.6",
     "@types/node": "18.15.5",
@@ -27,13 +28,10 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-hot-toast": "^2.4.0",
-    "react-input-mask": "^2.0.4",
     "react-query": "^3.39.3",
     "tailwindcss": "^3.2.7",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
-  "devDependencies": {
-    "@types/react-input-mask": "^3.0.2"
-  }
+  "devDependencies": {}
 }
